<resources>
    <string name="app_name">Habits Tracker</string>
    <string name="habit_type_label">Type of the habit</string>
    <string name="habit_info_format">%s • %d %s in %d %s</string>
    <string name="low_label">low</string>
    <string name="medium_label">medium</string>
    <string name="high_label">high</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="useful_label">Useful</string>
    <string name="harmful_label">Harmful</string>
    <string name="priority_label">Priority</string>
    <string name="quantity_label">Quantity</string>
    <string name="periodicity_label">Periodicity</string>
    <string name="save_label">Save</string>
    <string name="periodicity_sentence_start">Repeat</string>
    <string name="periodicity_sentence_middle">times in</string>
    <string name="periodicity_sentence_end">days</string>
    <string name="required_error">Required</string>
    <string name="setup_habit_label">Set up habit</string>
    <string name="app_about"><b>Habits Tracker</b> is an application that helps you get a useful or harmful habit.
    Set up a habit and follow it responsibility to achieve amazing results!
    Choose priority and color to concentrate on what matters to you.</string>
    <string name="about_label">About</string>
    <string name="home_label">Home</string>
    <string name="filters_and_sorts_label">Filters and Sorts</string>
    <string name="title_search_label">Search by title</string>
    <string name="sort_by_habit_priority_label">Sort by priority</string>
    <string name="sort_priority_ascending_label">Sort habits in ascending order of priority</string>
    <string name="sort_priority_descending_label">Sort habits in descending order of priority</string>
    <string name="connection_error_message">A network problem has occurred: check your internet connection</string>
    <string name="delete_habit_label">Delete</string>
    <string name="app_icon_label">Application icon</string>
    <string name="icon_url">https://michaelhermann.com.au/wp-content/uploads/2014/05/Power-of-Habit-Loop.jpg</string>

    <plurals name="time_label">
        <item quantity="one">time</item>
        <item quantity="other">times</item>
    </plurals>
    <plurals name="day_label">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
</resources>
