<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.khdv.habitstracker.screens.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_habitListFragment_to_editHabitFragment"
            app:destination="@id/editHabitFragment" />
    </fragment>
    <fragment
        android:id="@+id/editHabitFragment"
        android:name="com.khdv.habitstracker.screens.edit.EditHabitFragment"
        android:label="@string/setup_habit_label"
        tools:layout="@layout/fragment_edit_habit">
        <argument
            android:name="habit_index"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.khdv.habitstracker.screens.about.AboutFragment"
        android:label="@string/about_label"
        tools:layout="@layout/fragment_about" />
</navigation>