<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screens.home.HabitFiltersAndSortsFragment">

    <data>

        <import type="com.khdv.habitstracker.util.Order" />

        <variable
            name="viewModel"
            type="com.khdv.habitstracker.ui.screens.home.HabitsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="@dimen/content_spacing"
        android:paddingEnd="@dimen/content_spacing"
        android:paddingBottom="@dimen/bottom_sheet_peek_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_peek_height"
            android:gravity="center_vertical"
            android:text="@string/filters_and_sorts_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_peek_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sort_by_habit_priority_label"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/sort_priority_ascending_label"
                android:onClick="@{() -> viewModel.setPriorityOrder(Order.ASCENDING)}"
                android:padding="@dimen/image_button_padding"
                app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/sort_priority_descending_label"
                android:onClick="@{() -> viewModel.setPriorityOrder(Order.DESCENDING)}"
                android:padding="@dimen/image_button_padding"
                app:srcCompat="@drawable/arrow_downward_black_24dp" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_peek_height"
            android:ems="10"
            android:hint="@string/title_search_label"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.titleFilter}"
            android:textSize="16sp" />

    </LinearLayout>

</layout>